// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-date-textbox Collpase On Select 1`] = `
<DocumentFragment>
  <span
    class="date-textbox"
    id="testid"
  >
    <span
      class="textbox ebay-date-textbox--main textbox--icon-end"
    >
      <input
        class="textbox__control"
        placeholder="YYYY-MM-DD"
        type="text"
        value=""
      />
      <button
        aria-controls="testid-content"
        aria-expanded="false"
        aria-label="open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--calendar-24"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
    <div
      class="date-textbox__popover"
      hidden=""
      id="testid-content"
    >
      <div
        class="calendar"
      >
        <div
          class="calendar__header"
        >
          <div
            class="calendar__header--inner"
          >
            <button
              aria-label="Show December 2023"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-24"
                />
              </svg>
            </button>
            <h3>
              January 2024
            </h3>
            <button
              aria-label="Show February 2024"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-right-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-right-24"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="calendar__body"
        >
          <div
            class="calendar__month"
          >
            <table>
              <caption>
                January 2024
              </caption>
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Sun
                  </th>
                  <th
                    scope="col"
                  >
                    Mon
                  </th>
                  <th
                    scope="col"
                  >
                    Tue
                  </th>
                  <th
                    scope="col"
                  >
                    Wed
                  </th>
                  <th
                    scope="col"
                  >
                    Thu
                  </th>
                  <th
                    scope="col"
                  >
                    Fri
                  </th>
                  <th
                    scope="col"
                  >
                    Sat
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    colspan="1"
                  />
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-01"
                      tabindex="-1"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-02"
                      tabindex="-1"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-03"
                      tabindex="-1"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-04"
                      tabindex="-1"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      aria-current="date"
                      data-iso="2024-01-05"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-06"
                      tabindex="-1"
                    >
                      6
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-07"
                      tabindex="-1"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-08"
                      tabindex="-1"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-09"
                      tabindex="-1"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-10"
                      tabindex="-1"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-11"
                      tabindex="-1"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-12"
                      tabindex="-1"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-13"
                      tabindex="-1"
                    >
                      13
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-14"
                      tabindex="-1"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-15"
                      tabindex="-1"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-16"
                      tabindex="-1"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-17"
                      tabindex="-1"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-18"
                      tabindex="-1"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-19"
                      tabindex="-1"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-20"
                      tabindex="-1"
                    >
                      20
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-21"
                      tabindex="-1"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-22"
                      tabindex="-1"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-23"
                      tabindex="-1"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-24"
                      tabindex="-1"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-25"
                      tabindex="-1"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-26"
                      tabindex="-1"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-27"
                      tabindex="-1"
                    >
                      27
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-28"
                      tabindex="-1"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-29"
                      tabindex="-1"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-30"
                      tabindex="-1"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-31"
                      tabindex="-1"
                    >
                      31
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-date-textbox Controlled Values 1`] = `
<DocumentFragment>
  <span
    class="date-textbox"
    id="testid"
  >
    <span
      class="textbox ebay-date-textbox--main textbox--icon-end"
    >
      <input
        class="textbox__control"
        placeholder="YYYY-MM-DD"
        type="text"
        value=""
      />
      <button
        aria-controls="testid-content"
        aria-expanded="false"
        aria-label="open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--calendar-24"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
    <div
      class="date-textbox__popover"
      hidden=""
      id="testid-content"
    >
      <div
        class="calendar"
      >
        <div
          class="calendar__header"
        >
          <div
            class="calendar__header--inner"
          >
            <button
              aria-label="Show December 2023"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-24"
                />
              </svg>
            </button>
            <h3>
              January 2024
            </h3>
            <button
              aria-label="Show February 2024"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-right-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-right-24"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="calendar__body"
        >
          <div
            class="calendar__month"
          >
            <table>
              <caption>
                January 2024
              </caption>
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Sun
                  </th>
                  <th
                    scope="col"
                  >
                    Mon
                  </th>
                  <th
                    scope="col"
                  >
                    Tue
                  </th>
                  <th
                    scope="col"
                  >
                    Wed
                  </th>
                  <th
                    scope="col"
                  >
                    Thu
                  </th>
                  <th
                    scope="col"
                  >
                    Fri
                  </th>
                  <th
                    scope="col"
                  >
                    Sat
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    colspan="1"
                  />
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-01"
                      tabindex="-1"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-02"
                      tabindex="-1"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-03"
                      tabindex="-1"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-04"
                      tabindex="-1"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      aria-current="date"
                      data-iso="2024-01-05"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-06"
                      tabindex="-1"
                    >
                      6
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-07"
                      tabindex="-1"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-08"
                      tabindex="-1"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-09"
                      tabindex="-1"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-10"
                      tabindex="-1"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-11"
                      tabindex="-1"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-12"
                      tabindex="-1"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-13"
                      tabindex="-1"
                    >
                      13
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-14"
                      tabindex="-1"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-15"
                      tabindex="-1"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-16"
                      tabindex="-1"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-17"
                      tabindex="-1"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-18"
                      tabindex="-1"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-19"
                      tabindex="-1"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-20"
                      tabindex="-1"
                    >
                      20
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-21"
                      tabindex="-1"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-22"
                      tabindex="-1"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-23"
                      tabindex="-1"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-24"
                      tabindex="-1"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-25"
                      tabindex="-1"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-26"
                      tabindex="-1"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-27"
                      tabindex="-1"
                    >
                      27
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-28"
                      tabindex="-1"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-29"
                      tabindex="-1"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-30"
                      tabindex="-1"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-31"
                      tabindex="-1"
                    >
                      31
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </span>
  <div
    style="margin-top: 16px;"
  >
    <button
      class="btn btn--secondary"
    >
      Set to 2024-01-03
    </button>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-date-textbox Default 1`] = `
<DocumentFragment>
  <span
    class="date-textbox"
    id="testid"
  >
    <span
      class="textbox ebay-date-textbox--main textbox--icon-end"
    >
      <input
        class="textbox__control"
        placeholder="YYYY-MM-DD"
        type="text"
        value=""
      />
      <button
        aria-controls="testid-content"
        aria-expanded="false"
        aria-label="open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--calendar-24"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
    <div
      class="date-textbox__popover"
      hidden=""
      id="testid-content"
    >
      <div
        class="calendar"
      >
        <div
          class="calendar__header"
        >
          <div
            class="calendar__header--inner"
          >
            <button
              aria-label="Show December 2023"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-24"
                />
              </svg>
            </button>
            <h3>
              January 2024
            </h3>
            <button
              aria-label="Show February 2024"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-right-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-right-24"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="calendar__body"
        >
          <div
            class="calendar__month"
          >
            <table>
              <caption>
                January 2024
              </caption>
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Sun
                  </th>
                  <th
                    scope="col"
                  >
                    Mon
                  </th>
                  <th
                    scope="col"
                  >
                    Tue
                  </th>
                  <th
                    scope="col"
                  >
                    Wed
                  </th>
                  <th
                    scope="col"
                  >
                    Thu
                  </th>
                  <th
                    scope="col"
                  >
                    Fri
                  </th>
                  <th
                    scope="col"
                  >
                    Sat
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    colspan="1"
                  />
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-01"
                      tabindex="-1"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-02"
                      tabindex="-1"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-03"
                      tabindex="-1"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-04"
                      tabindex="-1"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      aria-current="date"
                      data-iso="2024-01-05"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-06"
                      tabindex="-1"
                    >
                      6
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-07"
                      tabindex="-1"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-08"
                      tabindex="-1"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-09"
                      tabindex="-1"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-10"
                      tabindex="-1"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-11"
                      tabindex="-1"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-12"
                      tabindex="-1"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-13"
                      tabindex="-1"
                    >
                      13
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-14"
                      tabindex="-1"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-15"
                      tabindex="-1"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-16"
                      tabindex="-1"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-17"
                      tabindex="-1"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-18"
                      tabindex="-1"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-19"
                      tabindex="-1"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-20"
                      tabindex="-1"
                    >
                      20
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-21"
                      tabindex="-1"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-22"
                      tabindex="-1"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-23"
                      tabindex="-1"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-24"
                      tabindex="-1"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-25"
                      tabindex="-1"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-26"
                      tabindex="-1"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-27"
                      tabindex="-1"
                    >
                      27
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-28"
                      tabindex="-1"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-29"
                      tabindex="-1"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-30"
                      tabindex="-1"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-31"
                      tabindex="-1"
                    >
                      31
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-date-textbox Range 1`] = `
<DocumentFragment>
  <span
    class="date-textbox"
    id="testid"
  >
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        placeholder="YYYY-MM-DD"
        type="text"
        value=""
      />
    </span>
    <span
      class="textbox ebay-date-textbox--main textbox--icon-end"
    >
      <input
        class="textbox__control"
        placeholder="YYYY-MM-DD"
        type="text"
        value=""
      />
      <button
        aria-controls="testid-content"
        aria-expanded="false"
        aria-label="open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--calendar-24"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
    <div
      class="date-textbox__popover"
      hidden=""
      id="testid-content"
    >
      <div
        class="calendar"
      >
        <div
          class="calendar__header"
        >
          <div
            class="calendar__header--inner"
          >
            <button
              aria-label="Show December 2023"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-24"
                />
              </svg>
            </button>
            <h3>
              January 2024
            </h3>
            <button
              aria-label="Show February 2024"
              class="icon-btn icon-btn--small icon-btn--transparent"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-right-24"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-right-24"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="calendar__body"
        >
          <div
            class="calendar__month"
          >
            <table>
              <caption>
                January 2024
              </caption>
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Sun
                  </th>
                  <th
                    scope="col"
                  >
                    Mon
                  </th>
                  <th
                    scope="col"
                  >
                    Tue
                  </th>
                  <th
                    scope="col"
                  >
                    Wed
                  </th>
                  <th
                    scope="col"
                  >
                    Thu
                  </th>
                  <th
                    scope="col"
                  >
                    Fri
                  </th>
                  <th
                    scope="col"
                  >
                    Sat
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    colspan="1"
                  />
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-01"
                      tabindex="-1"
                    >
                      1
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-02"
                      tabindex="-1"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-03"
                      tabindex="-1"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-04"
                      tabindex="-1"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      aria-current="date"
                      data-iso="2024-01-05"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-06"
                      tabindex="-1"
                    >
                      6
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-07"
                      tabindex="-1"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-08"
                      tabindex="-1"
                    >
                      8
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-09"
                      tabindex="-1"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-10"
                      tabindex="-1"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-11"
                      tabindex="-1"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-12"
                      tabindex="-1"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-13"
                      tabindex="-1"
                    >
                      13
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-14"
                      tabindex="-1"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-15"
                      tabindex="-1"
                    >
                      15
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-16"
                      tabindex="-1"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-17"
                      tabindex="-1"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-18"
                      tabindex="-1"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-19"
                      tabindex="-1"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-20"
                      tabindex="-1"
                    >
                      20
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-21"
                      tabindex="-1"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-22"
                      tabindex="-1"
                    >
                      22
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-23"
                      tabindex="-1"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-24"
                      tabindex="-1"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-25"
                      tabindex="-1"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-26"
                      tabindex="-1"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-27"
                      tabindex="-1"
                    >
                      27
                    </button>
                  </td>
                </tr>
                <tr>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-28"
                      tabindex="-1"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-29"
                      tabindex="-1"
                    >
                      29
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-30"
                      tabindex="-1"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class=""
                  >
                    <button
                      data-iso="2024-01-31"
                      tabindex="-1"
                    >
                      31
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
